Stub project done

--- a/Celebratorica/app/build.gradle
+++ b/Celebratorica/app/build.gradle
@@ -20,10 +20,13 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile project(':app-utils')
+    compile project(':common-utils')
+    compile 'com.github.spiddekauga:MaterialShowcaseView:2.0.0'
+
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.google.code.findbugs', module: 'jsr305'
     })
-    compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
 }
