--- a/Celebratorica/app/src/main/AndroidManifest.xml
+++ b/Celebratorica/app/src/main/AndroidManifest.xml
@@ -7,8 +7,8 @@
 		android:icon="@mipmap/ic_launcher"
 		android:label="@string/app_name"
 		android:supportsRtl="true"
-		android:theme="@style/AppTheme">
-		<activity android:name=".CelebrateListActivity">
+		android:theme="@style/Material">
+		<activity android:name=".celebration.CelebrationListActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
