Add ability to add celebration items

--- a/Celebratorica/app/build.gradle
+++ b/Celebratorica/app/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     compile project(':app-utils')
     compile project(':common-utils')
     compile 'com.github.spiddekauga:MaterialShowcaseView:2.0.0'
+    compile 'com.wdullaer:materialdatetimepicker:2.5.0'
 
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
