Use ViewPager for displaying multiple lists
- Can display multiple lists
- Doesn't work to go back and display another list

--- a/Celebratorica/app/src/main/AndroidManifest.xml
+++ b/Celebratorica/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 		android:label="@string/app_name"
 		android:supportsRtl="true"
 		android:theme="@style/Material">
-		<activity android:name=".celebration.CelebrationActivity">
+		<activity android:name=".item.ItemActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 
