--- a/Celebratorica/build.gradle
+++ b/Celebratorica/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.android.tools.build:gradle:3.1.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,6 +18,12 @@ allprojects {
         jcenter()
         maven { url 'https://jitpack.io' }
         google()
+    }
+
+    ext {
+        minSdkVersionVal = 21
+        targetSdkVersionVal = 27
+        buildToolsVersionVal = '28.0.1'
     }
 }
 
