--- a/Celebratorica/build.gradle
+++ b/Celebratorica/build.gradle
@@ -1,21 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlinVersionVal = '1.2.61'
     repositories {
         jcenter()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:4.1.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersionVal"
     }
 }
 
 allprojects {
     repositories {
+        mavenCentral()
         jcenter()
         maven { url 'https://jitpack.io' }
         google()
