--- a/Celebratorica/app/build.gradle
+++ b/Celebratorica/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'com.github.BlushineIO:MaterialShowcaseView:2.1.0'
     implementation 'com.google.code.gson:gson:2.8.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersionVal"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersionVal"
 
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
